fix(eds-demo): 💄Reduce border thickness for .sidebar-link to align with figma

--- a/packages/eds-demo/src/app/(exercise)/dynamic/styles.module.css
+++ b/packages/eds-demo/src/app/(exercise)/dynamic/styles.module.css
@@ -46,7 +46,7 @@ Use Dev Mode in Figma to inspect elements and find the variable name.
 
 .sidebar-link {
   color: var(--eds-color-text-subtle);
-  border-bottom: 2px solid var(--eds-color-border-subtle);
+  border-bottom: 1px solid var(--eds-color-border-subtle);
 
   &:hover {
     background-color: var(--eds-color-bg-fill-muted-default);
