--- a/packages/eds-demo/src/app/(exercise)/static/styles.module.css
+++ b/packages/eds-demo/src/app/(exercise)/static/styles.module.css
@@ -48,7 +48,7 @@ Use Dev Mode in Figma to inspect elements and find the variable name.
 
 .sidebar-link {
   color: var(--eds-color-text-neutral-subtle);
-  border-bottom: 2px solid var(--eds-color-border-neutral-subtle);
+  border-bottom: 1px solid var(--eds-color-border-neutral-subtle);
 
   &:hover {
     background-color: var(--eds-color-bg-neutral-fill-muted-hover);
